# research-agent

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
briefs/: example_brief.json
explorer/: __init__.py  server.py
explorer/templates/: base.html  finding.html  index.html  store.html
explorer/templates/partials/: neighbors.html  search_results.html
mcp_server/: __init__.py  server.py
src/research_agent/: __init__.py  config.py  main.py
src/research_agent/agent/: __init__.py  loop.py  system_prompt.py  tools_schema.py
src/research_agent/embeddings/: __init__.py  qwen_embedder.py
src/research_agent/initial_research/: __init__.py  wikipedia.py
src/research_agent/models/: __init__.py  brief.py  document.py  findings.py
src/research_agent/output/: __init__.py  renderer.py
src/research_agent/planner/: __init__.py  query_generator.py
src/research_agent/storage/: __init__.py  collection.py
src/research_agent/tools/: __init__.py  browser.py  finding_queue.py  memory.py  quote_validator.py
tests/: __init__.py  debug_browser.py  test_browser.py
