[project]
name = "research-agent"
version = "0.1.0"
description = "An autonomous research agent powered by Claude with browser automation and vector memory"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.40.0",
    "playwright>=1.48.0",
    "torch>=2.4.0",
    "transformers>=4.51.0",
    "sentence-transformers>=2.7.0",
    "hnswlib>=0.8.0",
    "pydantic>=2.9.0",
    "wikipedia-api>=0.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "mcp>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
research-agent = "research_agent.main:main"
research-explorer = "explorer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent", "mcp_server", "explorer"]
